bug 74731 - remove extraneous cols at end of cell map rows, keep table cols and cell map cols in synch. sr=attinasi, r=cmanske